Fix navbar center and overflow - Fix footer padding - Fix activities closing tag

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -204,7 +204,7 @@ MEDIA QUERY NAVBAR LINKS
     }
 
     .navbar-item {
-        flex: 1 1 auto;
+        flex: 1;
         padding-left: 10px;
         padding-right: 10px;
         top: 7vw;
@@ -236,7 +236,7 @@ MEDIA QUERY NAVBAR LINKS
         background-position: 0 center;
         background-image: url("../images/white_side.png");
         content: "";
-        width: 50px;
+        width: 16px;
         display: block;
         position: absolute;
         top: 0;
@@ -311,7 +311,6 @@ MEDIA QUERY NAVBAR LINKS
     }
 
     .navbar-item {
-        flex: 1 1 auto;
         padding-left: 10px;
         padding-right: 10px;
         top: 4vw;
@@ -503,6 +502,13 @@ MEDIA QUERY NAVBAR LINKS
 
 .footer-kustoms {
     background-color: #A72222;
+    margin-top: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.footer-kustoms .address {
+    padding: 15px;
 }
 
 p.footer-kustoms {
